<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="other_apps_in_market">Other apps</string>
	<string name="app_name">Apps2Org</string>
	<string name="choose_labels_header">Choose labels</string>
	<string name="alert_dialog_ok">OK</string>
	<string name="alert_dialog_hide">Hide</string>
	<string name="alert_dialog_cancel">Cancel</string>
	<string name="alert_dialog_new">New</string>
	<string name="tab_apps">Apps</string>
	<string name="tab_labels">Labels</string>
	<string name="preparing_apps_list">Preparing apps list</string>
	<string name="total_apps">Total apps</string>
	<string name="please_wait_loading">Please wait while loading...</string>
	<string name="rename">Rename</string>
	<string name="change_icon">Change icon</string>
	<string name="launch">Launch</string>
	<string name="star_app">Star</string>
	<string name="unstar_app">Unstar</string>
	<string name="rename_label">Rename label</string>
	<string name="label_name">Label name</string>
	<string name="other_label">Other apps</string>
	<string name="uninstall">Uninstall</string>
	<string name="reload_apps">Reload</string>
	<string name="about">About</string>
	<string name="Apps_organizer_label">Apps label</string>
	<string name="choose_labels_for_shortcut">Choose labels</string>
	<string name="all_labels">All labels</string>
	<string name="select_apps">Select apps</string>
	<string name="loading_shortcut_grid">Loading...</string>
	<string name="delete">Delete</string>
	<string name="delete_confirm">Do you really want to delete label %s?</string>
	<string name="export_menu">Export</string>
	<string name="import_menu">Import</string>
	<string name="export_error">Export error</string>
	<string name="import_error">Import error</string>
	<string name="sdcard_error">Sdcart error</string>
	<string name="directory_error">Directory error</string>
	<string name="file_name">File name</string>
	<string name="no_files_error">No files found in directory AppsOrganizer in your sd card</string>
	<string name="Author">Originally by</string>
	<string name="Any_suggestion_or_bug_to">Any suggestion or bug to</string>
	<string name="Follow_me_on">Follow me on</string>
	<string name="Help">Help</string>
	<string name="How_to">How to use Apps Organizer</string>
	<string name="Starred_apps">Starred apps</string>
	<string name="how_to_message">You can create labels home shortcuts with a long click on your Android home</string>
	<string name="how_to_message_2">An how to is available online (see about dialog for details)</string>
	<string name="Preferences">Preferences</string>
	<string name="Shortcut_folder">Shortcut folder</string>
	<string name="show_close_button_in_folder">Show close button</string>
	<string name="close_folder_after_launch">Close after launch</string>
	<string name="starred_first">Starred first</string>
	<string name="Bug_report">Bug report</string>
	<string name="Bug_report_1">Apps Organizer seems to have crashed</string>
	<string name="Bug_report_2">If you want to help us to fix this bug please report it</string>
	<string name="Bug_report_button">Send email</string>
	<string name="Bug_report_3">Thank you!</string>
	<string name="Load_from_sd">Load from sd card</string>
	<string name="list_default_action">Single click action</string>
	<string name="list_default_action_summary">Default action on single click on an app</string>
	<string name="choose_action">Choose action</string>
	<string name="Application_not_found">Application not found</string>
	<string name="Application_not_found_message">You need AndExplorer for select a file, you can download it from market (it\'s free)</string>
	<string name="Open_market">Open market</string>
	<string name="select_jpg_bmp_title">File type error</string>
	<string name="select_jpg_bmp">You must choose a png or jpg file</string>
	<string name="Donate">Donate</string>
	<string name="Download">Download</string>
	<string name="Downloading">Downloading</string>
	<string name="Starting_download">Starting download</string>
	<string name="All_apps">All apps</string>
	<string name="Apps_with_no_label">Apps with no label</string>
	<string name="Download_labels">Download labels</string>
	<string name="Download_labels_from_Cyrket">Download labels from Cyrket</string>
	<string name="First_time_download_message_1">Since version 1.3 you can download Android Market labels from cyrket</string>
	<string name="First_time_download_message_2">Do you want to download labels now?</string>
	<string name="choose_app">Choose app</string>
	<string name="Android_Image_Gallery">Android Image Gallery</string>
	<string name="Change_log">Change log</string>
	<string name="Change_log_text">1.5.19\n
	Traditional Chinese translation\n
1.5.18\n
	Bug fixing\n
1.5.16\n
	Japanese translation\n
1.5.15\n
	Fixed missing apps issue\n
1.5.14\n
	Serbian translation\n
1.5.13\n
	Greek translation\n
1.5.12\n
	Fixed duplicate apps bug\n
1.5.11\n
	Bug fixing\n
1.5.10\n
	Portuguese translation\n
1.5.9\n
	Apps to sd bug fixing\n
1.5.8\n
	Bug fixing\n
1.5.7\n
	Fixed apps moved to sd bug\n
	Norwegian translation\n
1.5.6\n
	New close button\n
	Click outside a folder to close it\n
1.5.5\n
	Bug fixing\n
1.5.4\n
	Swedish translation\n
1.5.3\n
	Fast scroll on apps list\n
1.5.2\n
	Bug fixing\n
1.5.1\n
	Feedback on widget selection\n
1.5\n
	Android Widget\n
1.4.10\n
	Russian translation\n
1.4.9\n
	Add label to home command\n
1.4.8\n
	Spanish translation\n
1.4.7\n
	Korean translation\n
1.4.6\n
	MyBackup Integration Support\n
1.4.5\n
	Performance improvement (revert to version 1.4.3)\n
1.4.4\n
	Fixed reload when an app change icon after an update\n
	Fixed navigation with buttons/trackball\n
1.4.3\n
	German translation\n
	Performance improvement\n
1.4.2\n
	Other apps shortcut\n
1.4.1\n
	Fixed droid icons issue\n
	New label menu item\n
1.4.0.1\n
	Fixed error launching some apps\n
1.4\n
	Icon pack support\n
	Fixed shortcut text width\n
	Danish translation\n
1.3.4\n
	Fixed choose label dialog bug\n
1.3.3\n
	Chinese translation\n
	New choose label dialog\n
1.3.2\n
	Fixed droid resolution bug\n
1.3.1\n
	Android 2.0 support</string>
	<string name="label_already_exists">Label already exists</string>
	<string name="looking_for_icons">Looking for icons...</string>
	<string name="loading_icons">Loading icons...</string>	
	<string name="error_while_launching_activity">Error while launching application</string>	
	<string name="New_label">New label</string>	
	<string name="Apps_list">Apps list</string>
    <string name="label_default_internet">Internet</string>
    <string name="label_default_android">Android</string>
    <string name="label_default_multimedia">Multimedia</string>
    <string name="label_default_tools">Tools</string>
    <string name="label_default_games">Games</string>
    <string name="add_to_home">Add to home</string>
    <string name="FolderOrganizer_title">FolderOrganizer</string>
    <string name="FolderOrganizer_message">If you want to organize Apps, Bookmarks, Contacts and Shortcuts you can try FolderOrganizer.\nExported Apps Organizer data can be easily imported</string>
    <string name="Deleted_label">Deleted label</string>
    <string name="starred_warning">No starred apps in current label. Click on star in title bar to show all apps of the label</string>
</resources>
