<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TextView android:text="@string/Bug_report_1" android:gravity="center_horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:paddingBottom="8px" android:paddingTop="30px" android:textSize="18px"></TextView>

	<TextView android:text="@string/Bug_report_2" android:gravity="center_horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:paddingBottom="8px" android:textSize="18px"></TextView>

	<Button android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:text="@string/Bug_report_button" android:layout_margin="20px"
		android:id="@+id/sendEmailButton"></Button>

	<TextView android:text="@string/Bug_report_3" android:gravity="center_horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:paddingBottom="8px" android:textSize="18px"></TextView>

</LinearLayout>


