<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content">

	<LinearLayout android:layout_height="48px" android:id="@+id/buttonPanel"
		android:layout_width="fill_parent" android:gravity="center" android:layout_alignParentBottom="true">
		<Button android:text="@string/alert_dialog_ok" android:id="@+id/okButton"
			android:layout_height="wrap_content" android:layout_width="110px"/>

		<Button android:text="@string/alert_dialog_cancel" android:id="@+id/cancelButton"
			android:layout_height="wrap_content" android:layout_width="110px"/>

		<ImageButton android:text="@string/alert_dialog_new"
			android:id="@+id/newLabelButton" android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:src="@android:drawable/ic_input_add" />
	</LinearLayout>

	<ListView android:id="@+id/labelList" android:layout_width="fill_parent" android:layout_above="@id/buttonPanel"
		android:choiceMode="multipleChoice" android:layout_height="wrap_content" android:layout_alignParentTop="true" />

</RelativeLayout>